# 25-26-DyAA-p03-Experimentacion-DivideYVenceras

./: .gitignore  .gitmodules  README.md
part1/: algorithm.h  divide_conquer.cc  divide_conquer.h  divide_conquer_library.h  instance.h  (+15 more)
part2/: CMakeLists.txt
part2/include/: combine.h  combine_part2.h  divide.h  divide_conquer.h  divide_conquer_part2.h  instance.h  instance_part2.h  reader.h  small.h  solution.h  solution_part2.h  solve_small.h  solve_small_part2.h  writer.h
part2/sltn/: README.md  heatmap.py  solution.json  solution_horizon14_employees10_shifts6_000.json  solution_horizon14_employees10_shifts6_001.json  solution_horizon14_employees20_shifts10_000.json  solution_horizon14_employees20_shifts10_001.json  solution_horizon30_employees20_shifts10_000.json  solution_horizon30_employees20_shifts10_001.json  solution_horizon30_employees30_shifts20_000.json  solution_horizon30_employees30_shifts20_001.json  solution_horizon7_employees10_shifts6_000.json  solution_horizon7_employees10_shifts6_001.json  solution_horizon7_employees5_shifts3_000.json  solution_horizon7_employees5_shifts3_001.json
part2/src/: algorithm.h  divide-conquer.cc  divide-conquer.h  divide.h  divide_conquer.h  divide_conquer_part2.h  divide_part2.h  employees-days-shifts.cc  employees-days-shifts.h  instance.h  instance_part2.h  loader-employee-day-shift.cc  loader-employee-day-shift.h  loader.h  main.cc  plan-employees.cc  plan-employees.h  saver-schedule.cc  saver-schedule.h  saver.h  schedule.cc  schedule.h  small.h  small_part2.h  solution.h  solution_part2.h  solve_small.h  solver.h
(+5 files in other folders)
